# bedrock-repacker

./: Cargo.toml  fix_gdk_releases.js  versions.json
.github/scripts/: generate_index.js  sync_gdk.js
.github/workflows/: cron_sync.yml  generate_index.yml  mirror_appx.yml  repack.yml
src/: main.rs
src/gdk/: decoder.rs  header.rs  key.rs  mod.rs  stream.rs  structs.rs
